--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,9 @@ js/tinymce/plugins/imagetools/plugin.js
 js/tinymce/plugins/wordcount/plugin.js
 js/tinymce/plugins/codesample/plugin.js
 js/tinymce/themes/inlite/theme.js
+js/tinymce/plugins/localfile/plugin.js
+js/tinymce/plugins/respec/plugin.js
+js/tinymce/plugins/sidepanel/plugin.js
 imagemanager
 filemanager
 mcmanager
